small fixes
1. build.ts redundant check
2. use `@query` instead of `useRef` for cleaner code
3. group controls in title bar together so they're not messed up when
   resizing
4. remove invalid </input> tag (doesn't need to be closed)

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,10 @@ w-title::part(name) {
 	flex-grow: 1;
 }
 
-w-filepicker,
-w-filesaver {
+.controls {
 	margin: 5px 2px;
+}
+
+.controls > * {
+	height: 100%;
 }
